--- a/brochure.html
+++ b/brochure.html
@@ -390,7 +390,7 @@ The conference welcomes faculty members, undergraduate and postgraduate students
 
       <div class="section-heading">Important Dates</div>
       <div class="dates">
-        <div class="date-box"><strong>Last date of Abstract submission:</strong> 01 st  March 2026</div>
+        <div class="date-box"><strong>Last date of Abstract submission(Extended):</strong> 20 th  March 2026</div>
         <div class="date-box"><strong>Intimation of acceptance:</strong> 16 th  March 2026</div>
         <div class="date-box"><strong>Full paper submission:</strong> 31 st  March 2026</div>
         <div class="date-box"><strong>Last Day of Registration:</strong> 10 th  April 2026</div>
